--- a/src/main/resources/hu/csepel/muzeumfrontendjavafx/main-view.fxml
+++ b/src/main/resources/hu/csepel/muzeumfrontendjavafx/main-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane minHeight="500.0" minWidth="450.0" prefHeight="500.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.csepel.muzeumfrontendjavafx.MainController">
+<AnchorPane minHeight="500.0" minWidth="450.0" prefHeight="500.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.csepel.muzeumfrontendjavafx.controllers.MainController">
    <children>
       <TabPane minHeight="500.0" minWidth="450.0" prefHeight="500.0" prefWidth="450.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -36,7 +36,7 @@
                                     <Button minWidth="100.0" mnemonicParsing="false" onAction="#onFestmenyTorlesClick" text="Törlés" />
                                  </children>
                               </HBox>
-                              <TableView prefHeight="428.0" prefWidth="450.0" GridPane.rowIndex="1">
+                              <TableView fx:id="tableViewFestmeny" prefHeight="428.0" prefWidth="450.0" GridPane.rowIndex="1">
                                 <columns>
                                   <TableColumn fx:id="festmenyIdCol" prefWidth="75.0" text="ID" />
                                   <TableColumn fx:id="festmenyCimCol" prefWidth="75.0" text="CÍM" />
@@ -70,17 +70,17 @@
                                <children>
                                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                                        <children>
-                                           <Button minWidth="100.0" mnemonicParsing="false" text="Hozzáadás" />
-                                           <Button minWidth="100.0" mnemonicParsing="false" text="Módosítás" />
-                                           <Button minWidth="100.0" mnemonicParsing="false" text="Törlés" />
+                                           <Button minWidth="100.0" mnemonicParsing="false" onAction="#onSzoborHozzaadasClick" text="Hozzáadás" />
+                                           <Button minWidth="100.0" mnemonicParsing="false" onAction="#onSzoborModositasClick" text="Módosítás" />
+                                           <Button minWidth="100.0" mnemonicParsing="false" onAction="#onSzoborTorlesClick" text="Törlés" />
                                        </children>
                                    </HBox>
-                                   <TableView prefHeight="428.0" prefWidth="450.0" GridPane.rowIndex="1">
+                                   <TableView fx:id="tableViewSzobor" prefHeight="428.0" prefWidth="450.0" GridPane.rowIndex="1">
                                        <columns>
-                                           <TableColumn prefWidth="75.0" text="ID" />
-                                           <TableColumn prefWidth="75.0" text="SZEMÉLY" />
-                                           <TableColumn prefWidth="75.0" text="MAGASSÁG" />
-                                           <TableColumn prefWidth="75.0" text="ÁR" />
+                                           <TableColumn fx:id="szoborIdCol" prefWidth="75.0" text="ID" />
+                                           <TableColumn fx:id="szoborSzemelyCol" prefWidth="75.0" text="SZEMÉLY" />
+                                           <TableColumn fx:id="szoborMagassagCol" prefWidth="75.0" text="MAGASSÁG" />
+                                           <TableColumn fx:id="szoborArCol" prefWidth="75.0" text="ÁR" />
                                        </columns>
                                        <columnResizePolicy>
                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
