--- a/src/main/resources/hu/csepel/muzeumfrontendjavafx/main-view.fxml
+++ b/src/main/resources/hu/csepel/muzeumfrontendjavafx/main-view.fxml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <AnchorPane minHeight="500.0" minWidth="450.0" prefHeight="500.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.csepel.muzeumfrontendjavafx.controllers.MainController">
    <children>
       <TabPane minHeight="500.0" minWidth="450.0" prefHeight="500.0" prefWidth="450.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -32,11 +23,11 @@
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                                  <children>
                                     <Button minWidth="100.0" mnemonicParsing="false" onAction="#onFestmenyHozzaadasClick" text="Hozzáadás" />
-                                    <Button minWidth="100.0" mnemonicParsing="false" onAction="#onFestmenyModositasClick" text="Módosítás" />
-                                    <Button minWidth="100.0" mnemonicParsing="false" onAction="#onFestmenyTorlesClick" text="Törlés" />
+                                    <Button fx:id="btnFestmenyModositas" disable="true" minWidth="100.0" mnemonicParsing="false" onAction="#onFestmenyModositasClick" text="Módosítás" />
+                                    <Button fx:id="btnFestmenyTorles" disable="true" minWidth="100.0" mnemonicParsing="false" onAction="#onFestmenyTorlesClick" text="Törlés" />
                                  </children>
                               </HBox>
-                              <TableView fx:id="tableViewFestmeny" prefHeight="428.0" prefWidth="450.0" GridPane.rowIndex="1">
+                              <TableView fx:id="tableViewFestmeny" onMouseClicked="#onItemSelected" prefHeight="428.0" prefWidth="450.0" GridPane.rowIndex="1">
                                 <columns>
                                   <TableColumn fx:id="festmenyIdCol" prefWidth="75.0" text="ID" />
                                   <TableColumn fx:id="festmenyCimCol" prefWidth="75.0" text="CÍM" />
